# calfcord

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  ROADMAP.md  SECURITY.md  calfkit-agent-factory-plan.md  conversation-history-plan.md  data.json  discord-retry-with-feedback-plan.md  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml  router.yml  router.yml.example  skills-lock.json
.claude/skills/: diataxis-docs-writer  opensource-guide-coach
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  codeql.yml  coverage.yml  installer.yml  release.yml
agents/: agent.template.md  assistant.md  codex_demo.md  conan.md  echo.py  example.md.template  scribe.md
docker/: entrypoint.sh
docs/: a2a-threads.md  ambient-routing.md  architecture.md  authoring-agents.md  authoring-tools.md  codex-auth.md  configuration.md  discord-setup.md  distributed-deployment.md  installation.md  mcp-tools.md  security.md  troubleshooting.md  using-calfcord.md  using-disco.md
docs/adr/: 0001-per-server-mcp-processes.md  0002-agent-side-mcp-selector-owned-by-calfcord.md  0003-mcp-json-schema-and-literal-secrets.md  0005-adopt-calfkit-tools-explicit-composition.md  0007-tool-alias-cli-config.md  0008-bridge-on-calfkit-caller-surface.md  0009-delete-ambient-router.md  0010-delete-control-plane-mesh-roster.md  0011-native-a2a-and-handoff.md  0012-persona-is-agent-name-drop-fields.md  0013-at-most-once-rementions-re-execute.md
docs/design/: README.md  agent-memory-plan.md  calfkit-0.5.4-lifecycle-adoption.md  calfkit-012-implementation-plan.md  calfkit-012-migration.md  discord-org-design.md  discord-topic-bridge-plan.md  end-user-onboarding-plan.md  mcp-reintroduction.md  mcp-removal.md  onboarding-redesign.md  step-transcripts-and-live-streaming-plan.md  tool-alias-cli.md
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_0eb9b53b7be7c797_definition_py.html  z_0eb9b53b7be7c797_factory_py.html  z_0eb9b53b7be7c797_gates_py.html  z_0eb9b53b7be7c797_identifier_py.html  z_0eb9b53b7be7c797_loader_py.html  z_0eb9b53b7be7c797_md_writer_py.html  z_0eb9b53b7be7c797_memory_py.html  z_0eb9b53b7be7c797_peer_roster_py.html  z_0eb9b53b7be7c797_phonebook_py.html  z_0eb9b53b7be7c797_routing_py.html  z_0eb9b53b7be7c797_runner_py.html  z_0eb9b53b7be7c797_state_py.html  z_0eb9b53b7be7c797_thinking_py.html  z_1a1139215befaba9_check_py.html  z_1a1139215befaba9_heartbeat_py.html  z_1a1139215befaba9_refresher_py.html  z_2634791fe2b6c066_config_py.html  z_2634791fe2b6c066_definition_py.html  z_2634791fe2b6c066_fanout_py.html  z_2634791fe2b6c066_prompt_py.html  z_2634791fe2b6c066_roster_py.html  z_2634791fe2b6c066_runner_py.html  z_5fb7dbcfd7d0f979__agents_py.html  z_5fb7dbcfd7d0f979__envfile_py.html  z_5fb7dbcfd7d0f979__fields_py.html  z_5fb7dbcfd7d0f979__mcp_py.html  z_5fb7dbcfd7d0f979__prompts_py.html  z_5fb7dbcfd7d0f979__providers_py.html  z_5fb7dbcfd7d0f979_agent_create_py.html  z_5fb7dbcfd7d0f979_agent_edit_py.html  z_5fb7dbcfd7d0f979_agent_inspect_py.html  z_5fb7dbcfd7d0f979_agent_lifecycle_py.html  z_5fb7dbcfd7d0f979_agent_tools_py.html  z_5fb7dbcfd7d0f979_deploy_py.html  z_5fb7dbcfd7d0f979_discord_discovery_py.html  z_5fb7dbcfd7d0f979_doctor_py.html  (+92 more)
roadmap/: onboarding-cli.md  scheduler.md  tansu-broker.md
scripts/: install.sh
scripts/tests/: lint.sh  test_installer.sh
src/calfcord/: _atomic.py  _provisioning.py  _worker_runtime.py  ambient_routing.py  topics.py
src/calfkit_organization/: topics.py
tests/: test_atomic.py  test_install_sh.py  test_provisioning_wiring.py  test_worker_runtime.py
tests/agents/: test_definition.py  test_factory.py  test_gates.py  test_identifier.py  test_loader.py  test_mcp_guard.py  test_md_writer.py  test_memory.py  test_peer_roster.py  test_phonebook.py  test_routing_schema.py  test_runner.py  test_thinking.py
tests/bridge/: conftest.py  test_a2a_dispatch.py  test_a2a_project.py  test_config_slash.py  test_egress.py  test_gateway_heartbeat.py  test_gateway_replies.py  test_gateway_run.py  test_gateway_worker_lifecycle.py  test_history.py  test_history_provider_integration.py  test_ingress.py  test_ingress_history.py  test_ingress_router.py  test_mention_handler.py  test_normalizer.py  test_on_message_routing.py  test_outbox.py  test_outbox_retry.py  test_overrides.py  test_pending_wires.py  test_persona_reply.py  test_persona_resolve.py  test_progress.py  test_projection_noop.py  test_registry.py  test_registry_router.py  test_replay.py  test_reply_poster.py  test_roster.py  test_roundtrip.py  test_step_events.py  test_steps.py  test_steps_state.py  test_steps_toggle.py  test_synthesized_consumer.py  test_task_command.py  test_task_slash.py  test_transcript_store_open.py  test_transcripts.py  (+1 more)
tests/cli/: conftest.py  test_agent_create.py  test_agent_edit.py  test_agent_inspect.py  test_agent_lifecycle.py  test_agent_tools.py  test_deploy.py  test_discord_discovery.py  test_doctor.py  test_envfile.py  test_explain.py  test_fields.py  test_init.py  test_init_wizard.py  test_logs.py  test_main.py  test_mcp_admin.py  test_providers.py  (+4 more)
(+254 files in other folders)
