[project]
name = "calfkit-organization"
version = "0.1.0"
description = "Multi-agent organization on Discord."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "authlib>=1.7.2",
    "calfkit~=0.3.1",
    "discord-py>=2.7.1",
    "openhands-sdk>=1.23.1",
    "openhands-tools>=1.23.1",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "python-frontmatter>=1.1.0,<2",
    "smolagents>=1.25.0",
    "uuid-utils>=0.15.0",
]

[project.scripts]
calfkit-bridge = "calfkit_organization.bridge.gateway:main"
calfkit-agent = "calfkit_organization.agents.runner:main"
calfkit-tools = "calfkit_organization.tools.runner:main"
calfkit-router = "calfkit_organization.router.runner:main"
calfkit-auth = "calfkit_organization.providers.codex.cli:main"
calfcord-package-tools = "calfkit_organization.packaging.cli_tools:main"
calfcord-package-agents = "calfkit_organization.packaging.cli_agents:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/calfkit_organization"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests that hit real external services (gated on env vars; not run in normal CI)",
]

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src", "examples"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "W", "SIM", "RUF"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"examples/*" = ["T201"]  # allow print() in examples

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]
