[project]
name = "calfcord"
version = "0.1.0"
description = "Multi-agent organization on Discord."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "authlib>=1.7.2",
    "calfkit~=0.9.0",
    "discord-py>=2.7.1",
    "httpx>=0.28.1",
    "inquirerpy>=0.3.4",
    "openhands-sdk>=1.23.1",
    "openhands-tools>=1.28.0",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "python-frontmatter>=1.3.0,<2",
    "pyyaml>=6.0.3",
    "smolagents[toolkit]>=1.25.0",
    "uuid-utils>=0.16.0",
]

[project.scripts]
calfkit-bridge = "calfcord.bridge.gateway:main"
calfkit-agent = "calfcord.agents.runner:main"
calfkit-tools = "calfcord.tools.runner:main"
calfkit-router = "calfcord.router.runner:main"
calfkit-mcp = "calfcord.mcp.runner:main"
calfkit-auth = "calfcord.providers.codex.cli:main"
calfcord-package-tools = "calfcord.packaging.cli_tools:main"
calfcord-package-agents = "calfcord.packaging.cli_agents:main"
calfcord-cli = "calfcord.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/calfcord"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests that hit real external services (gated on env vars; not run in normal CI)",
]

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "W", "SIM", "RUF"]
ignore = []

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]
